Refactor value type handlings.